# nbr-5410-calculator

./: .gitignore  casa.json  pyproject.toml  readme.md  requirements.txt
data/: breakers.json  breakers.json5  groupingCorrectionFactor.json5  temperatureCorrectionFactor.json  wires.json5
data/referenceMethods/: B1.json
data/wireTypes/: aluminium-pvc.json5  copper-pvc.json5
doc/: testProject.json  testProject.json5  todo.txt
nbr_5410_calculator/: UiMainWindow.py  __init__.py  __main__.py  circuitsTab.py  conduitsTab.py  main.py  projectTab.py  ui.py
nbr_5410_calculator/generic_model_views/: items.py  models.py  views.py
nbr_5410_calculator/installation/: circuit.py  circuitTests.py  conduitRun.py  project.py  util.py
nbr_5410_calculator/ui/: mainWindow.ui
share/data/: breakers.json5  groupingCorrectionFactor.json5  temperatureCorrectionFactor.json5
share/data/conduit/: flexible.json5  rigid.json5
share/data/wireTypes/: aluminium-pvc.json5  copper-epr.json5  copper-pvc.json5
share/translations/: app_en_US.ts  app_pt_BR.ts
src/: UiMainWindow.py  circuitsTab.py  conduitsTab.py  genericTableView.py  genericTreeView.py  genericViews.py  main.py  models.py  projectTab.py  ui.py
src/genericModelViews/: models.py
src/installation/: circuit.py  circuitTests.py  conduitRun.py  conduitRunTests.py  project.py  projectTests.py  util.py  utilTests.py
src/typings/jsons/: __init__.pyi  _common_impl.pyi  _dump_impl.pyi  _load_impl.pyi
src/ui/: mainWindow.ui
tests/generic_model_views/: models_tests.py
tests/installation/: __init__.py  circuit_tests.py  conduit_run_tests.py  project_tests.py  util.py  util_tests.py
